# fina-core

./: .gitignore  README.md  init_db.py  portfolio.py  pyproject.toml  yaml_loader.py
config/: db.py
