[tool.poetry]
name = "fina-core"
version = "0.1.0"
description = ""
authors = ["arturhgca <arturhgca@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
yfinance = "^0.1.54"
pendulum = "^2.1.2"
Flask-SQLAlchemy = "^2.4.4"
connexion = "^2.7.0"
marshmallow = "^3.7.1"
flask-marshmallow = "^0.13.0"
marshmallow-sqlalchemy = "^0.23.1"
pyyaml = "^5.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
